# whisper-diarize

./: .gitignore  Makefile  README.md  transcribe.py
.firecrawl/: agentic-ios-2026.md  arbigent.md  belle-mlx.md  breeze-mlx.md  hf-chinese-whisper.json  hf-whisper-chinese.md  modal-stt.md  northflank-stt-2026.md  search-ai-testing.json  search-asr-chinese.json  search-chinese-asr-mlx.json  search-macos-uitesting.json  search-multilingual-mlx.json  search-xcuitest-ai.json
.github/workflows/: macos-app.yml
app/: Package.swift  README.md
app/.swiftpm/xcode/package.xcworkspace/xcuserdata/jacobwang.xcuserdatad/: UserInterfaceState.xcuserstate
app/.swiftpm/xcode/xcuserdata/jacobwang.xcuserdatad/xcschemes/: xcschememanagement.plist
app/Sources/WhisperDiarize/: AppDesign.swift  DropZoneView.swift  Info.plist  ProcessingView.swift  SettingsView.swift  TranscriptView.swift  TranscriptionRunner.swift
app/Sources/WhisperDiarize/Resources/: pyproject.toml  transcribe.py
app/Sources/WhisperDiarizeCore/: Models.swift  TranscriptParser.swift
app/Tests/WhisperDiarizeTests/: TranscriptParserTests.swift
app/UITests/MinutesUITests/: AppUITests.swift
app/UITests/WhisperDiarizeUITests/: AppUITests.swift
scripts/: package-macos.sh
