[project]
name = "whisper-diarize"
version = "0.1.0"
description = "Fast audio transcription with speaker diarization — Apple Silicon optimized"
requires-python = ">=3.11"
dependencies = [
    "deepmultilingualpunctuation>=1.0.1",
    "jiwer>=4.0.0",
    "mlx-lm>=0.31.3",
    "mlx-whisper>=0.4.3",
    "pyannote-audio==4.0.4",
    "pyannote-metrics>=4.1",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
]
